# maine-legislative-interpreter

./: .gitignore  Makefile  README.md  discovery.md  eda_phase1.md  proposalv2.md
data-processing/: pyproject.toml
data-processing/src/: pipeline.py
data-processing/src/dlt_pipeline/: config.py  constants.py  db_access.py  dlt_sources.py
data-processing/src/dlt_pipeline/pipeline/: run.py
data-processing/src/dlt_pipeline/services/: api.py  embeddings.py  storage.py
data-processing/src/dlt_pipeline/sources/: session.py  vectorization.py
data-processing/src/dlt_pipeline/utils/: concurrency.py  nlp.py  pdf.py  text.py
data-processing/src/notebooks/: data_export.ipynb  dbscan_validation.ipynb  direct_duckdb_embeddings.ipynb  pdf_reader_eval.ipynb  pdf_reader_prototype.ipynb  xref_7_stream.txt
data-processing/src/pipeline/: async_fetch.py  legislative_session.py  umap_clustering.py
data-processing/src/sql/: SUPP_OPP_REGEX_CLASSIFICATION.sql  V_TESTIMONY_DETAIL.View.sql
docs/check_ins/: oct_11_check_in.key
docs/notes/: discovery.md
docs/project-reports/: check-in-1.md  eda_phase1.md  plan.md
environments/: legislation_pipeline.yml
framework-site/: .pnp.cjs  README.md  observablehq.config.js  package-lock.json  pyproject.toml
framework-site/src/: example-report.md  index.md
framework-site/src/.observablehq/cache/_npm/@duckdb/duckdb-wasm@1.28.0/: _esm.js
framework-site/src/.observablehq/cache/_observablehq/: client.js  stdlib.js
framework-site/src/.observablehq/cache/data/: testimony.json
framework-site/src/data/: testimony.json.py
maine_legislative_interpreter/: dbt_project.yml
mathieu-maine-bills/: .gitignore  setup-miniconda-patched-environment.yml
mathieu-maine-bills/src/: scraper.py
mathieu-maine-testimony/: .gitmodules
mathieu-maine-testimony/data/: README.md  environment.yml  setup-miniconda-patched-environment.yml
mathieu-maine-testimony/notebooks/: nx.ipynb
mathieu-maine-testimony/src/: bills.py
notes/: check-in, Oct 11.md
project-reports/: check-in-2.md  eda_phase1.md  proposal.md
src/: generate_graphics.py  pipeline.py
src/.ipynb_checkpoints/: pipeline-checkpoint.ipynb
src/database/: db_writer.py  schemas.py
src/dlt_pipeline/: db_access.py  dlt_sources.py
src/notebooks/: eda.ipynb  hdbscan_with_umap.ipynb  organization-name-cleaning.ipynb  pdf_reader_eval.ipynb  pipeline.ipynb  sentence_transformer.ipynb  sqlite_to_duckdb.ipynb  testing.ipynb  xref_4_stream.txt
src/pipeline/: endpoints.py  legislative_session.py  org_clustering.py  (+1 more)
(+37525 files in other folders)
