[project]
name = "me-legislation-pipeline"
version = "0.1.0"
description = "Maine legislation data pipeline"
requires-python = ">=3.9"
dependencies = [
    "dbt-core",
    "dlt",
    "pandas",
    "duckdb",
    "tqdm",
    "pypdf",
    "spacy",
    "sentence_transformers"
]

[project.optional-dependencies]
dev = [
    "poethepoet>=0.24.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.poe.tasks.fetch-data]
help = "Fetch and prepare raw data"
sequence = [
    { shell = "mkdir -p data" },
    { cmd = "python src/dlt_pipeline/dlt_sources.py" },
]

[tool.poe.tasks.pipeline]
help = "Run full data pipeline"
sequence = ["fetch-data"]